--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -36,4 +36,8 @@ homepage:
 
 store:
     pattern: /adictos/{store}
+    defaults: { _controller: MontesAdictosBundle:Store:store }
+
+store_index:
+    pattern: /adictos/
     defaults: { _controller: MontesAdictosBundle:Store:index }
